--- a/Views/CarRental/Details.cshtml
+++ b/Views/CarRental/Details.cshtml
@@ -13,10 +13,6 @@
             <dl class="grid grid-cols-2 gap-2">
                 <dt class="font-semibold">Id</dt>
                 <dd>@Model.Id</dd>
-
-                <dt class="font-semibold">User Id</dt>
-                <dd>@Model.UserId</dd>
-
                 <dt class="font-semibold">Start Date</dt>
                 <dd>@Model.StartDate.ToString("MM/dd/yyyy")</dd>
 
@@ -30,10 +26,10 @@
                 <dd>
                     <span class="px-3 py-1 rounded-md text-white font-medium 
                   @((int)Model.Status == 3 ? "bg-yellow-500" :
-                                        (int)Model.Status == 6 ? "bg-blue-500" :
-                                        (int)Model.Status == 4 ? "bg-green-500" :
-                                        (int)Model.Status == 5 ? "bg-red-500" :
-                                        "bg-gray-500")">
+    (int)Model.Status == 6 ? "bg-blue-500" :
+    (int)Model.Status == 4 ? "bg-green-500" :
+                                                        (int)Model.Status == 5 ? "bg-red-500" :
+    "bg-gray-500")">
                         @Model.Status.ToString()
                     </span>
                 </dd>
@@ -42,10 +38,27 @@
             </dl>
         </div>
     </div>
-    <div class="mt-4">
-        <a asp-action="Details" asp-controller="Contract" asp-route-Id=@Model.ContractId
-            class="bg-blue-500 text-white px-4 py-2 rounded-md shadow-md hover:bg-blue-700 transition">Tạo hợp đồng</a>
-    </div>
+
+    @if ((int)Model.Status == 3)
+    {
+        <div class="mt-4">
+            <a asp-action="Details" asp-controller="Contract" asp-route-Id=@Model.ContractId
+                class="bg-blue-500 text-white px-4 py-2 rounded-md shadow-md hover:bg-blue-700 transition">Tạo hợp
+                đồng</a>
+        </div>
+    }
+    @if ((int)Model.Status == 2)
+    {
+        <div class="mt-4">
+            <form asp-action="ReturnCar" method="post">
+                <input type="hidden" name="id" value="@Model.ContractId">
+                <button type="submit"
+                    class="bg-blue-500 text-white px-4 py-2 rounded-md shadow-md hover:bg-blue-700 transition">Trả
+                    xe</button>
+            </form>
+
+        </div>
+    }
 </div>
 
 <div class="mt-4 space-x-4">
