--- a/Views/Payment/Checkout.cshtml
+++ b/Views/Payment/Checkout.cshtml
@@ -105,7 +105,7 @@
                 </div>
                 <div class="card-footer border-secondary bg-transparent">
                     <div class="d-flex justify-content-between mt-2">
-                        <h5 class="font-weight-bold">Tổng giá</h5>
+                        <h5 class="font-weight-bold">Cọc</h5>
                         <h5 class="font-weight-bold" id="webTotalPrice">@Model.TotalPrice</h5>
                     </div>
                     <hr />
